--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "4.3.1",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "faker": "^5.5.2",
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "npm-run-all": "^4.1.5"
   }
 }
